apps/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: media

spec:
  replicas: 1

  strategy:
    type: Recreate

  selector:
    matchLabels:
      app.kubernetes.io/name: sonarr

  template:
    metadata:
      labels:
        app.kubernetes.io/name: sonarr

    spec:
      containers:
        - name: sonarr
          image: lscr.io/linuxserver/sonarr:4.0.19.2979-ls321
          imagePullPolicy: IfNotPresent

          ports:
            - name: http
              containerPort: 8989
              protocol: TCP

          volumeMounts:
            - name: config
              mountPath: /config

            - name: media
              mountPath: /media

            - name: downloads
              mountPath: /downloads

          resources:
            requests:
              cpu: 100m
              memory: 256Mi

            limits:
              cpu: "1"
              memory: 768Mi

          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 6

          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 3
            failureThreshold: 3

      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: sonarr-config

        - name: media
          persistentVolumeClaim:
            claimName: media-library

        - name: downloads
          persistentVolumeClaim:
            claimName: media-downloads
