apps/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: media

spec:
  type: ClusterIP

  selector:
    app.kubernetes.io/name: sonarr

  ports:
    - name: http
      port: 8989
      targetPort: http
      protocol: TCP
