apps/sonarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  namespace: media

  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  ingressClassName: traefik

  tls:
    - hosts:
        - sonarr.apps.bubudog.net
      secretName: sonarr-tls

  rules:
    - host: sonarr.apps.bubudog.net

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: sonarr

                port:
                  number: 8989
